erDiagram
    users {
        char id PK
        varchar email
        varchar password_hash
        enum role
        varchar given_name
        varchar middle_name
        varchar last_name
        varchar phone
        text profile_image_url
        boolean is_active
        boolean email_verified
        datetime email_verified_at
        datetime last_login_at
        datetime created_at
        datetime updated_at
    }

    refresh_tokens {
        char id PK
        char user_id FK
        varchar token_hash
        datetime expires_at
        datetime revoked_at
        datetime created_at
    }

    password_resets {
        char id PK
        char user_id FK
        varchar token_hash
        datetime expires_at
        datetime used_at
        datetime created_at
    }

    properties {
        char id PK
        char landlord_id FK
        varchar property_name
        enum property_type
        varchar door_number
        varchar address_line_1
        varchar address_line_2
        varchar city
        varchar county
        varchar postcode
        varchar country
        boolean is_hmo
        boolean hmo_licence_required
        varchar hmo_licence_number
        date hmo_licence_expiry
        int hmo_max_occupants
        boolean prs_registered
        varchar prs_registration_number
        date prs_registration_date
        int total_rooms
        int total_bathrooms
        enum status
        datetime created_at
        datetime updated_at
    }

    rooms {
        char id PK
        char property_id FK
        varchar room_name
        int room_number
        int floor_level
        decimal room_size_sqm
        int max_occupancy
        enum room_type
        json amenities
        decimal rent_amount
        boolean bills_included
        decimal deposit_amount
        boolean is_available
        datetime created_at
        datetime updated_at
    }

    tenancies {
        char id PK
        char tenant_id FK
        char property_id FK
        char room_id FK
        date start_date
        date end_date
        enum tenancy_type
        int notice_period_weeks
        enum lifecycle_status
        date notice_served_date
        enum notice_served_by
        varchar eviction_grounds
        decimal rent_amount
        enum rent_frequency
        int rent_due_day
        decimal deposit_amount
        enum deposit_scheme
        varchar deposit_reference
        date deposit_protected_date
        boolean tenant_info_sheet_provided
        date tenant_info_sheet_date
        boolean how_to_rent_guide_provided
        boolean pet_request_received
        enum pet_request_decision
        text pet_request_reason
        datetime created_at
        datetime updated_at
    }

    compliance_certificates {
        char id PK
        char property_id FK
        char document_id FK
        enum certificate_type
        varchar certificate_number
        date issue_date
        date expiry_date
        varchar contractor_name
        varchar contractor_company
        varchar contractor_registration
        varchar contractor_phone
        varchar contractor_email
        decimal cost
        enum status
        int reminder_days_before
        boolean reminder_sent
        text notes
        datetime created_at
        datetime updated_at
    }

    maintenance_requests {
        char id PK
        char property_id FK
        char room_id FK
        char tenant_id FK
        enum category
        varchar title
        text description
        enum priority
        enum status
        datetime reported_date
        datetime acknowledged_date
        date scheduled_date
        datetime resolved_date
        datetime closed_date
        int initial_response_hours
        int resolution_hours
        varchar contractor_name
        varchar contractor_phone
        decimal quoted_cost
        decimal actual_cost
        text landlord_notes
        text contractor_notes
        text tenant_feedback
        tinyint tenant_rating
        datetime created_at
        datetime updated_at
    }

    payments {
        char id PK
        char tenancy_id FK
        char paid_by_user_id FK
        decimal amount
        enum payment_type
        date due_date
        date payment_date
        enum payment_method
        enum payment_status
        varchar reference
        varchar transaction_id
        text notes
        datetime created_at
        datetime updated_at
    }

    transactions {
        char id PK
        char property_id FK
        char tenancy_id FK
        char room_id FK
        char paid_by_user_id FK
        enum type
        enum category
        decimal amount
        date date
        varchar description
        varchar supplier
        varchar reference
        enum payment_method
        enum status
        text notes
        datetime created_at
        datetime updated_at
    }

    documents {
        char id PK
        char property_id FK
        char tenancy_id FK
        char compliance_certificate_id FK
        char maintenance_request_id FK
        char uploaded_by FK
        varchar file_name
        enum document_type
        text storage_path
        int file_size
        varchar mime_type
        text description
        datetime created_at
        datetime updated_at
    }

    notifications {
        char id PK
        char user_id FK
        enum type
        varchar title
        text message
        enum priority
        enum related_entity_type
        char related_entity_id
        datetime read_at
        datetime created_at
    }

    audit_log {
        char id PK
        char user_id FK
        varchar action
        varchar entity_type
        char entity_id
        json old_values
        json new_values
        varchar ip_address
        text user_agent
        datetime created_at
    }

    users ||--o{ refresh_tokens : "has"
    users ||--o{ password_resets : "has"
    users ||--o{ properties : "landlord owns"
    users ||--o{ tenancies : "tenant in"
    users ||--o{ maintenance_requests : "raised by"
    users ||--o{ payments : "paid by"
    users ||--o{ transactions : "paid by"
    users ||--o{ documents : "uploaded by"
    users ||--o{ notifications : "receives"
    users ||--o{ audit_log : "tracked"
    properties ||--o{ rooms : "contains"
    properties ||--o{ tenancies : "has"
    properties ||--o{ compliance_certificates : "holds"
    properties ||--o{ maintenance_requests : "has"
    properties ||--o{ transactions : "has"
    properties ||--o{ documents : "has"
    rooms ||--o{ tenancies : "assigned to"
    rooms ||--o{ maintenance_requests : "location of"
    rooms ||--o{ transactions : "linked to"
    tenancies ||--o{ payments : "generates"
    tenancies ||--o{ transactions : "generates"
    tenancies ||--o{ documents : "has"
    compliance_certificates ||--o| documents : "evidenced by"
    maintenance_requests ||--o{ documents : "has"
